Fixed layout issues for mobile

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -7139,7 +7139,6 @@ body {
   height: 100%;
   width: 100%;
   z-index: 0;
-  opacity: 1;
 }
 
 .header-text {
@@ -7148,29 +7147,25 @@ body {
   width: 100%;
   padding: 10px;
 }
+@media screen and (max-width: 500px) {
+  .header-text {
+    font-size: 21px;
+  }
+}
 
 .search-bar {
   background: white;
   position: relative;
-  width: 300px;
   border: 1px solid #4cae4c;
 }
 
 .search-text {
-  float: left;
-}
-.search-text input {
   border: none;
   padding: .5em;
 }
 
-.search-btn {
-  margin: 0;
-}
-.search-btn button {
-  margin-left: 28px;
-  position: relative;
-  right: -110px;
+.btn-search {
+  float: right;
   border-radius: 0;
   padding: 7px 12px 6px 12px;
 }
@@ -7181,12 +7176,22 @@ body {
   box-shadow: 2px 2px 3px #E4E4E4;
   left: 0;
   top: 0;
-  width: 300px;
+  width: 80%;
+}
+@media screen and (max-width: 992px) {
+  .list-view {
+    width: 65%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .list-view {
+    width: 45%;
+  }
 }
 .list-view ul {
   -webkit-padding-start: 0;
   -webkit-margin-after: 0;
-  width: 300px;
+  width: 100%;
   height: 400px;
   overflow: scroll;
   overflow-x: hidden;
@@ -7200,8 +7205,15 @@ body {
   padding: 2em 0;
   border-bottom: 1px solid #DDD;
 }
-.list-view li span {
+.list-view li p {
   margin-left: 20px;
+  margin-bottom: 0;
+}
+@media screen and (max-width: 768px) {
+  .list-view li p {
+    margin-left: 0;
+    text-align: center;
+  }
 }
 .list-view li:hover {
   background: #F5F5F5;
@@ -7224,6 +7236,12 @@ body {
   width: 400px;
   border: 2px solid grey;
   box-shadow: #333 0 0 5px;
+}
+@media screen and (max-width: 400px) {
+  .photo-view {
+    width: 100%;
+    bottom: -400px;
+  }
 }
 .photo-view ul {
   overflow: scroll;
@@ -7262,6 +7280,12 @@ body {
   height: 300px;
   margin: 0 auto;
   margin-top: 30px;
+}
+@media screen and (max-width: 400px) {
+  .photo-holder {
+    width: 250px;
+    height: 250px;
+  }
 }
 
 .photo {
